--- a/Telephone_Directory.ipynb
+++ b/Telephone_Directory.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "name": "Telephone Directory.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyOW1KB52G4+B3dV2egRUV0X"
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -58,6 +57,17 @@
     {
       "cell_type": "code",
       "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ogi8kDS2oKDy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import pymongo\n",
         "client = pymongo.MongoClient(\"mongodb+srv://archit:1234@cluster0.iodze.mongodb.net/telephone_db?retryWrites=true&w=majority\")\n",
         "db = client.student\n",
@@ -79,9 +89,15 @@
         "         {\"name\":\"Ethan\",\"phone number\":\"9872943210\",\"address\":\"Chandigarh\"},\n",
         "         {\"name\":\"Felix\",\"phone number\":\"9234543210\",\"address\":\"Punjab\"},\n",
         "]\n",
-        "#inserting many(Create many)\n",
+        "#inserting many(Create many) C\n",
         "x=records.insert_many(mylist)\n",
-        "\n"
+        "\n",
+        "#insert one(Create one)\n",
+        "records.insert_one(\n",
+        "   {\n",
+        "      \"name\": \"John\",\"phone number\":\"9998132100\",\"address\":\"hyderabad\"\n",
+        "   }\n",
+        ")"
       ],
       "metadata": {
         "id": "-f4z6Z3BgC2r"
@@ -92,7 +108,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Finding all the records(Read)\n",
+        "#Finding all the records(Read)R\n",
         "for x in records.find():\n",
         "  print(x)"
       ],
@@ -122,38 +138,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#insert one(Create one)\n",
-        "records.insert_one(\n",
-        "   {\n",
-        "      \"name\": \"John\",\"phone number\":\"9998132100\",\"address\":\"hyderabad\"\n",
-        "   }\n",
-        ")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Vj8TbgiGke4g",
-        "outputId": "b651a5c5-e731-4ef2-b0ff-6a8cb2c79cdc"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<pymongo.results.InsertOneResult at 0x7fe13d72de60>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#Update one(Update)\n",
+        "#Update one(Update)U\n",
         "records.update_one({\"name\":\"Ethan\"}, {\"$set\":{\"name\":\"Eminem\"}})"
       ],
       "metadata": {
@@ -180,7 +165,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Deleting(Delete one)\n",
+        "#Deleting(Delete one)D\n",
         "records.delete_one({\"name\":\"John\"})"
       ],
       "metadata": {
